# qbitel-edgeos

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  codecov.yml  deny.toml  docker-compose.yml  rust-toolchain.toml
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy-website.yml  docs.yml  release.yml  sbom.yml
crates/q-attest/: Cargo.toml
crates/q-attest/src/: anomaly.rs  evidence.rs  lib.rs  protocol.rs  runtime.rs  supply_chain.rs  verification.rs
crates/q-attest/tests/: integration_tests.rs
crates/q-boot/: Cargo.toml  link.x
crates/q-boot/src/: boot_log.rs  lib.rs  load.rs  main.rs  recovery.rs  rollback.rs  verify.rs
crates/q-boot/tests/: integration_tests.rs
crates/q-common/: Cargo.toml
crates/q-common/src/: config.rs  constants.rs  errors.rs  lib.rs  log.rs  time.rs  types.rs  version.rs
crates/q-common/tests/: integration_tests.rs
crates/q-crypto/: Cargo.toml
crates/q-crypto/benches/: crypto_benchmarks.rs
crates/q-crypto/src/: aead.rs  dilithium.rs  error.rs  falcon.rs  field.rs  hash.rs  kat.rs  kyber.rs  lib.rs  ntt.rs  rng.rs  traits.rs  zeroize_utils.rs
crates/q-crypto/tests/: integration_tests.rs
crates/q-hal/: Cargo.toml
crates/q-hal/src/: error.rs  lib.rs  traits.rs
crates/q-hal/src/riscv/: clint.rs  mod.rs  pmp.rs
crates/q-hal/src/stm32h7/: crypto.rs  flash.rs  gpio.rs  i2c.rs  mod.rs  puf.rs  rng.rs  secure_storage.rs  spi.rs  system_rng.rs  timer.rs  uart.rs  watchdog.rs
crates/q-hal/src/stm32u5/: flash.rs  gtzc.rs  mod.rs  rng.rs  sau.rs
crates/q-hal/tests/: integration_tests.rs
crates/q-identity/: Cargo.toml
crates/q-identity/src/: commitment.rs  hardware_binding.rs  lib.rs  lifecycle.rs  storage.rs  verification.rs
crates/q-identity/tests/: integration_tests.rs
crates/q-kernel/: Cargo.toml
crates/q-kernel/src/: ipc.rs  lib.rs  memory.rs  panic.rs  scheduler.rs  syscall.rs  task.rs
crates/q-kernel/src/arch/: mod.rs
crates/q-kernel/src/arch/cortex_m/: context.rs  exceptions.rs  mod.rs  mpu.rs  syscall.rs
crates/q-kernel/src/arch/riscv/: context.rs  exceptions.rs  mod.rs  pmp.rs  syscall.rs
crates/q-kernel/tests/: integration_tests.rs
crates/q-mesh/: Cargo.toml
crates/q-mesh/src/: discovery.rs  group.rs  handshake.rs  lib.rs  routing.rs  session.rs  transport.rs
crates/q-mesh/src/radio/: lora.rs  mod.rs
crates/q-mesh/tests/: integration_tests.rs
crates/q-recover/: Cargo.toml
crates/q-recover/src/: lib.rs  offline.rs  recovery.rs  revocation.rs  rotation.rs  threshold.rs
crates/q-recover/tests/: integration_tests.rs
crates/q-update/: Cargo.toml
crates/q-update/src/: airgap.rs  apply.rs  lib.rs  manifest.rs  rollback.rs  slots.rs  staged.rs  verification.rs  version.rs
crates/q-update/tests/: integration_tests.rs
deploy/ansible/inventory/: hosts.yml
deploy/ansible/playbooks/: build.yml  provision.yml  update.yml
deploy/terraform/: main.tf  outputs.tf  variables.tf
docs/: API.md  DEPLOYMENT.md  INSTALLATION.md  NOTEBOOKLM_DOMAIN_USECASES_VIEW.md  NOTEBOOKLM_PRODUCT_MARKETING_VIEW.md  NOTEBOOKLM_TECHNICAL_VIEW.md  PRODUCT_OVERVIEW.md  QUICKSTART.md  WALKTHROUGH.md
examples/border-sensor/: Cargo.toml
examples/border-sensor/src/: main.rs
examples/railway-signaling/: Cargo.toml
examples/railway-signaling/src/: main.rs
examples/smart-meter/: Cargo.toml
examples/smart-meter/src/: main.rs
scripts/: build.sh  flash.sh  test.sh
tools/q-provision/: pyproject.toml
tools/q-provision/src/q_provision/: __init__.py  cli.py  config.py  flash.py  identity.py  keygen.py  verify.py
tools/q-provision/tests/: __init__.py  conftest.py  test_config.py  test_identity.py  test_keygen.py  test_verify.py
tools/q-sign/: pyproject.toml
tools/q-sign/src/q_sign/: __init__.py  cli.py  manifest.py  package.py  signer.py  verify.py
tools/q-sign/tests/: __init__.py  conftest.py  test_manifest.py  test_package.py  test_signer.py  test_verify.py
website/: .gitignore  next.config.js  package-lock.json  package.json  tailwind.config.ts
website/src/app/: globals.css  layout.tsx  page.tsx
website/src/components/: ArchitectureSection.tsx  ComplianceSection.tsx  CratesSection.tsx  CryptoSection.tsx  ExamplesSection.tsx  Footer.tsx  HardwareSection.tsx  Header.tsx  HeroSection.tsx  QuickStartSection.tsx  ToolsSection.tsx  UseCasesSection.tsx  WhySection.tsx
website/src/lib/: constants.ts
