[package]
name = "q-kernel"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Qbitel EdgeOS Microkernel"

[lib]
crate-type = ["rlib"]

[features]
default = ["stm32h7"]
stm32h7 = ["q-hal/stm32h7", "cortex-m", "cortex-m-rt"]
stm32u5 = ["q-hal/stm32u5", "cortex-m", "cortex-m-rt"]
riscv = ["q-hal/riscv"]
debug = []

[dependencies]
q-crypto = { workspace = true }
q-identity = { workspace = true }
q-update = { workspace = true }
q-recover = { workspace = true }
q-mesh = { workspace = true }
q-attest = { workspace = true }
q-hal = { workspace = true }
q-common = { workspace = true }
cortex-m = { workspace = true, optional = true }
cortex-m-rt = { workspace = true, optional = true }
heapless = { workspace = true }

[build-dependencies]

[dev-dependencies]
