# Qbitel EdgeOS - Railway Signaling Example
# Safety-critical railway signaling controller (SIL4)

[package]
name = "railway-signaling-example"
version = "0.1.0"
edition = "2021"
authors = ["Qbitel Inc."]
description = "Railway signaling controller using Qbitel EdgeOS"
license = "Apache-2.0"

[dependencies]
q-kernel = { path = "../../crates/q-kernel" }
q-crypto = { path = "../../crates/q-crypto" }
q-identity = { path = "../../crates/q-identity" }
q-mesh = { path = "../../crates/q-mesh" }
q-attest = { path = "../../crates/q-attest" }
q-update = { path = "../../crates/q-update" }
q-hal = { path = "../../crates/q-hal" }
q-common = { path = "../../crates/q-common" }

heapless = "0.8"
cortex-m = "0.7"
cortex-m-rt = "0.7"

[features]
default = ["stm32h7", "sil4"]
stm32h7 = ["q-hal/stm32h7"]
stm32u5 = ["q-hal/stm32u5"]
sil4 = []  # Enable SIL4 safety features

[[bin]]
name = "railway-signaling"
path = "src/main.rs"
